--- a/pricing.html
+++ b/pricing.html
@@ -115,7 +115,7 @@
     .faq h2{text-align:center;margin-bottom:10px}
     .faq-item{max-width:980px;margin:10px auto;background:var(--glass);border:1px solid var(--border);border-radius:14px}
     .faq-q{width:100%;text-align:left;background:transparent;border:none;color:#fff;font-weight:700;padding:14px 16px;display:flex;justify-content:space-between;align-items:center;cursor:pointer}
-    .faq-a{padding:0 16px 16px;display:none;color:#efeaff}
+    .faq-a{padding:16px 16px 16px;display:none;color:#efeaff}
     .faq-item.open .faq-a{display:block}
     .arrow{transition:transform .25s}
 
@@ -277,10 +277,7 @@
       <a href="#plans" class="btn-hero">See Plans</a>
       <a href="consultation.html" class="btn-ghost">Free 15-min Consultation</a>
     </div>
-    <div class="savings" aria-label="Yearly savings">
-      <span class="save-chip"><i class="far fa-calendar-check"></i> Essential yearly ≈ <b>6.1 months free</b></span>
-      <span class="save-chip"><i class="far fa-calendar-check"></i> Growth yearly ≈ <b>4.8 months free</b></span>
-    </div>
+   
     <div class="value-bar" aria-label="Highlights">
       <div class="value-pill"><i class="fas fa-rocket"></i> 2–3 week average go-live</div>
       <div class="value-pill"><i class="fas fa-tools"></i> Maintenance & updates included</div>
@@ -291,7 +288,14 @@
 
   <!-- STRIPE PRICING -->
   <section class="stripe-wrap" id="plans">
-    <p><i class="fas fa-tag"></i> Monthly plans require a one-time <strong><a href="https://webeaze.tawk.help/article/setup-fee" style="text-decoration:underline;color:#fff"><s>$299</s> $0 setup fee</a></strong> through <b>September 30</b>. Yearly plans always waive the setup.</p>
+    <!-- <p><i class="fas fa-tag"></i> Monthly plans require a one-time <strong><a href="https://webeaze.tawk.help/article/setup-fee" style="text-decoration:underline;color:#fff"><s>$299</s> $0 setup fee</a></strong> through <b>September 30</b>. Yearly plans always waive the setup.</p> -->
+
+    <h2 class="h3 text-center mb-4">Save More with Yearly Subscriptions!</h2>
+   
+    <div class="savings" aria-label="Yearly savings">
+      <span class="save-chip"><i class="far fa-calendar-check"></i> Essential yearly ≈ <b>6.1 months free</b></span>
+      <span class="save-chip"><i class="far fa-calendar-check"></i> Growth yearly ≈ <b>4.8 months free</b></span>
+    </div>
     <br>
     <script async src="https://js.stripe.com/v3/pricing-table.js"></script>
     <stripe-pricing-table
