--- a/website-request.html
+++ b/website-request.html
@@ -248,24 +248,11 @@
     <div class="orb"></div><div class="orb orb2"></div>
     <div class="container-narrow">
       <h1>Website Request</h1>
-      <p class="lead">Need a fix or a new feature? Submit a request below—or find an answer instantly with the Help Center search.</p>
+      <p class="lead">Need a fix or a new feature? Submit a request below. We're here to help!</p>
       <div class="chip"><i class="fas fa-user-check"></i>&nbsp;For active WebEaze clients</div>
       <div id="hours" class="chip" aria-live="polite"><i class="far fa-clock"></i>&nbsp;<span id="hours-text">Checking availability…</span></div>
 
-      <!-- Help Center Search -->
-      <div class="search-panel">
-        <form id="help-search" class="search-row" role="search" aria-label="Search Help Center and WebEaze">
-          <input id="q" class="search-input" type="search" placeholder="Search help articles, how-tos, and FAQs…" aria-label="Search query" />
-          <button class="search-btn" type="submit"><i class="fas fa-search"></i> Search</button>
-        </form>
-        <div class="suggest-row" aria-label="Popular searches">
-          <span class="suggest">domain transfer</span>
-          <span class="suggest">website launch timeline</span>
-          <span class="suggest">add a new page</span>
-          <span class="suggest">connect custom email</span>
-          <span class="suggest">billing & invoices</span>
-        </div>
-      </div>
+
     </div>
   </header>
 
