--- a/pinkiescoffeeco.html
+++ b/pinkiescoffeeco.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
@@ -409,4 +409,13 @@
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
 </body>
-</html>
+</html> -->
+
+
+<h3>Thanks for giving us a shot. Your free mockup period has ended. 
+  
+  <br>
+  
+  <br>
+  
+  If you like what you saw, you may get in touch with us here: <a href="https://webeaze.io/contact-us">https://webeaze.io/contact-us</a> and we'll get started.</h3>
