--- a/pricing.html
+++ b/pricing.html
@@ -288,9 +288,9 @@
 
   <!-- STRIPE PRICING -->
   <section class="stripe-wrap" id="plans">
-    <!-- <p><i class="fas fa-tag"></i> Monthly plans require a one-time <strong><a href="https://webeaze.tawk.help/article/setup-fee" style="text-decoration:underline;color:#fff"><s>$299</s> $0 setup fee</a></strong> through <b>September 30</b>. Yearly plans always waive the setup.</p> -->
+    <!-- <p><i class="fas fa-tag"></i> Monthly plans require a one-time <strong><a href="https://webeaze.tawk.help/article/setup-fee" style="text-decoration:underline;color:#fff"> $299 setup fee</a></strong>. Yearly plans waive this fee.</p> -->
 
-    <h2 class="h3 text-center mb-4">Save More with Yearly Subscriptions!</h2>
+    <h2 class="h3 text-center mb-4">Save over $1,000 with our Yearly plans!</h2>
    
     <div class="savings" aria-label="Yearly savings">
       <span class="save-chip"><i class="far fa-calendar-check"></i> Essential yearly ≈ <b>6.1 months free</b></span>
