--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@ html { scroll-behavior: smooth; } /* native smooth scroll */
       <div class="faq-grid">
         <details class="faq-item reveal">
           <summary><strong>What platforms do you use?</strong></summary>
-          <div class="pt-2">W're platform-agnostic meaning that we support a wide range of platforms (like WordPress, Squarespace, etc). We'll discuss this during your consultation. If you need a very simple website, we use clean HTML and CSS for speed and control.</div>
+          <div class="pt-2">We're platform-agnostic meaning that we support a wide range of platforms (like WordPress, Squarespace, etc). We'll discuss this during your consultation. If you need a very simple website, we use clean HTML and CSS for speed and control.</div>
         </details>
         <details class="faq-item reveal">
           <summary><strong>How long does it take?</strong></summary>
