--- a/maintenance.html
+++ b/maintenance.html
@@ -160,10 +160,10 @@
       </div>
       <div class="col-md-5 mt-4 mt-md-0">
         <div class="hero-card p-3 p-md-4 text-center">
-          <div class="small mb-1">🎉 Limited Time</div>
+          <div class="small mb-1">🎉 LIMITED TIME OFFER</div>
           <div class="h5 mb-1">$0 setup on monthly plans</div>
           <div class="small">Usually $299 • Ends Sept 30</div>
-          <a href="/consultation.html" class="btn btn-brand mt-3">Claim Offer</a>
+          <a href="/consultation.html" class="btn btn-brand mt-3">Claim Offer Today</a>
         </div>
       </div>
     </div>
@@ -298,7 +298,8 @@
     <div class="mb-1">&copy; <span id="yr"></span> WebEaze. All rights reserved.</div>
     <div class="mb-2 small">
       <a href="terms.html#privacy">Privacy Policy</a> ·
-      <a href="terms.html">Terms</a>
+      <a href="terms.html">Terms</a> ·
+      <a href="site-map.html">Site Map</a>
     </div>
     <div class="small">Made with ☕ in Delaware, USA</div>
   </div>
