--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ html { scroll-behavior: smooth; } /* native smooth scroll */
             Simple subscriptions, real human support, and no “set it and forget it.”
           </p>
           <div class="mt-3">
-            <a href="#plans" class="btn btn-brand mr-2 mb-2">See Plans</a>
+            <a href="#benefits" class="btn btn-brand mr-2 mb-2">Learn More</a>
             <a href="/samples.html" class="btn btn-ghost mb-2">See Past Work</a> 
 
             
@@ -410,10 +410,10 @@ html { scroll-behavior: smooth; } /* native smooth scroll */
           </div> -->
 
           <div class="hero-card p-3 p-md-4 text-center">
-            <div class="small mb-1">🎉 Limited Time Offer</div>
-            <div class="h5 mb-1">$0 setup fee to fall in love with a brand new website. </div>
+            <div class="small mb-1">🎉 LIMITED TIME OFFER</div>
+            <div class="h5 mb-1">Enjoy a $0 setup fee and discover your dream website today! </div>
             <div class="small">Usually $299 • Ends Sept 30</div>
-            <a href="https://webeaze.io/consultation" class="btn btn-brand mt-3">Fall in Love</a>
+            <a href="https://webeaze.io/consultation" class="btn btn-brand mt-3">Get Started Today</a>
           </div>
 
           
@@ -546,15 +546,17 @@ html { scroll-behavior: smooth; } /* native smooth scroll */
             </tr>
             <tr>
               <td class="plan">Support</td>
-              <td>Email Support</td>
+              <td>Email</td>
               <td class="hit">Email, Zoom, Chat</td>
-              <td>Priority Support </td>
+              <td>Email, Zoom, Chat </td>
             </tr>
             <tr>
-              <td class="plan">Setup</td>
-              <td>$299 one-time</td>
-              <td class="hit">$299 one-time</td>
-              <td>Included</td>
+              <td class="plan">SEO Tools</td>
+              <td>Basic</td>
+              <td class="hit">Advanced</td>
+              <td>
+                Advanced + Monthly Report
+              </td>
             </tr>
             <tr>
               <td></td>
