--- a/anniversary.html
+++ b/anniversary.html
@@ -71,16 +71,16 @@
             <div class="card-simple p-4 h-100">
               <h2 class="h4 mb-2">Where We Are Now</h2>
               <ul class="list-plain">
-                <li><strong>Flexible subscriptions</strong> — Monthly & yearly plans built for growth.</li>
-                <li><strong>Multiple support channels</strong> — Zoom, Live Chat, and Email.</li>
-                <li><strong>Help Center</strong> — Practical, growing library of guides.</li>
-                <li><strong>Referral Program</strong> — Win-win rewards for sharing WebEaze.</li>
+                <li><strong>Flexible subscriptions</strong>. Monthly & yearly plans built for growth.</li>
+                <li><strong>Multiple support channels</strong>. Zoom, Live Chat, and Email.</li>
+                <li><strong>Help Center</strong>. Practical, growing library of guides.</li>
+                <li><strong>Referral Program</strong>. Win-win rewards for sharing WebEaze.</li>
               </ul>
             </div>
           </div>
           <div class="col-md-6 mb-3">
             <div class="card-simple p-4 h-100">
-              <h2 class="h4 mb-2">What We’re Building Next</h2>
+              <h2 class="h4 mb-2">What We're Building Next</h2>
               <ul class="list-plain">
                 <li><strong>Client Portal</strong> to centralize resources & requests.</li>
                 <li><strong>Automated website requests</strong> for faster turnaround.</li>
@@ -139,7 +139,7 @@
         <h2 class="h5 mb-3">Referral Terms & Conditions</h2>
         <details>
           <summary>1) Tax Responsibility</summary>
-          <div class="pt-2">All referral earnings are taxable income. You’re responsible for reporting earnings to your tax authority. WebEaze does not withhold taxes or provide tax documents unless legally required.</div>
+          <div class="pt-2">All referral earnings are taxable income. You're responsible for reporting earnings to your tax authority. WebEaze does not withhold taxes or provide tax documents unless legally required.</div>
         </details>
         <details>
           <summary>2) Payout Eligibility</summary>
@@ -151,11 +151,11 @@
         </details>
         <details>
           <summary>4) Verification</summary>
-          <div class="pt-2">Use our contact/referral form to notify us. Both parties should mention the referrer at sign-up. We aren’t responsible for untracked or unverifiable referrals.</div>
+          <div class="pt-2">Use our contact/referral form to notify us. Both parties should mention the referrer at sign-up. We aren't responsible for untracked or unverifiable referrals.</div>
         </details>
         <details>
           <summary>5) Payment Methods</summary>
-          <div class="pt-2">Payouts via Venmo, Cash App, PayPal, or Zelle. Provide accurate details; communication happens via secure email. We won’t ask for info beyond your handle/username or phone number.</div>
+          <div class="pt-2">Payouts via Venmo, Cash App, PayPal, or Zelle. Provide accurate details; communication happens via secure email. We won't ask for info beyond your handle/username or phone number.</div>
         </details>
         <details>
           <summary>6) Program Changes</summary>
@@ -163,7 +163,7 @@
         </details>
         <details>
           <summary>7) No Employment Relationship</summary>
-          <div class="pt-2">Participation doesn’t create an employee, contractor, or partnership relationship with WebEaze.</div>
+          <div class="pt-2">Participation doesn't create an employee, contractor, or partnership relationship with WebEaze.</div>
         </details>
         <details>
           <summary>8) Subject to Terms & Privacy</summary>
@@ -178,7 +178,8 @@
       <div>&copy; <span id="yr"></span> WebEaze. All rights reserved.</div>
       <div class="mt-1">
         <a href="https://billyjoinville.me/terms#privacy-policy">Privacy Policy</a> ·
-        <a href="terms.html">Terms</a>
+        <a href="terms.html">Terms</a> ·
+        <a href="site-map.html">Site Map</a>
       </div>
     </div>
   </footer>
