--- a/contact-us.html
+++ b/contact-us.html
@@ -104,9 +104,9 @@
   <!-- HERO -->
   <header class="hero">
     <div class="hero-inner container-narrow">
-      <span class="eyebrow">Contact</span>
-      <h1>Talk to a real human. We answer fast.</h1>
-      <p class="lead">Current client? Submit a <a href="https://webeaze.io/website-request"><strong>Website Request</strong></a>. New here? Use the form below or email us—either way, we’ll respond quickly.</p>
+      <span class="eyebrow">Contact WebEaze</span>
+      <h1>Let's talk. We answer fast.</h1>
+      <p class="lead">Current client? Submit a <a href="https://webeaze.io/website-request" style="color: rgb(238, 238, 238) !important;"><strong>Website Request</strong></a>. New here? Contact us using the methods below, we'll respond quickly.</p>
       <div class="badges" aria-label="Channels">
         <span class="badge-chip"><i class="fas fa-envelope"></i> support@webeaze.io</span>
         <span class="badge-chip"><i class="fas fa-question-circle"></i> Help Center</span>
@@ -128,7 +128,9 @@
         </div>
         <div class="card-solid">
           <h5><strong>Email</strong></h5>
-          <p>Have files or context to share? Email us anytime.</p>
+          <p>
+            Share feedback, send files for context, or ask general questions. 
+          </p>
           <p class="mb-0"><a href="mailto:support@webeaze.io">support@webeaze.io</a></p>
         </div>
         <div class="card-solid">
@@ -163,7 +165,7 @@
         <dt>How fast do you respond?</dt>
         <dd>Same‑day on weekdays; next business day otherwise. Urgent incidents are prioritized.</dd>
         <dt>Do you offer phone support?</dt>
-        <dd>We schedule calls or Zoom to keep things focused and actionable. Request one in your message.</dd>
+        <dd>We schedule calls or Zoom upon request to keep things focused and actionable.</dd>
         <dt>Existing client and need a change?</dt>
         <dd>Use the <a href="https://webeaze.io/website-request">Website Request</a> so it routes straight to our production queue.</dd>
       </dl>
