--- a/faq.html
+++ b/faq.html
@@ -123,7 +123,7 @@
   <header class="hero">
     <span class="pill">FAQ</span>
     <h1>Answers, fast.</h1>
-    <p>Everything you need to know about WebEaze—plans, timelines, tech, and what it’s like to work together.</p>
+    <p>Everything you need to know about WebEaze—plans, timelines, tech, and what it's like to work together.</p>
     <div class="meta">
       <span class="pill">Avg. launch: 1–2 weeks</span>
       <span class="pill">Mobile + SEO ready</span>
@@ -169,7 +169,7 @@
           </button>
           <div class="faq-a" role="region" aria-hidden="true">
             <div class="faq-a-inner">
-              Absolutely. Explore real projects on our <a href="samples.html"><u>Samples</u></a> page. Need industry-specific examples? <a href="contact-us.html"><u>Contact us</u></a> and we’ll send a tailored set.
+              Absolutely. Explore real projects on our <a href="samples.html"><u>Samples</u></a> page. Need industry-specific examples? <a href="contact-us.html"><u>Contact us</u></a> and we'll send a tailored set.
             </div>
           </div>
         </article>
@@ -182,7 +182,7 @@
           </button>
           <div class="faq-a" role="region" aria-hidden="true">
             <div class="faq-a-inner">
-              We love level-ups—audits, updates, or full redesigns. Growth and Elite are ideal for established sites that want better conversions, SEO, or new features.
+              We love level-ups. Including audits, updates, or full redesigns. Our Growth and Elite plans are ideal for established sites that want better conversions, SEO, or new features.
             </div>
           </div>
         </article>
@@ -195,7 +195,7 @@
           </button>
           <div class="faq-a" role="region" aria-hidden="true">
             <div class="faq-a-inner">
-              We focus on local businesses and solo pros. That lets us streamline our workflow and use package pricing—so you get clarity, speed, and value without surprise hourly fees.
+              We focus on local businesses and solo pros. That lets us streamline our workflow and use package pricing. As a result, you get clarity, speed, and value without surprise hourly fees.
             </div>
           </div>
         </article>
@@ -234,7 +234,7 @@
           </button>
           <div class="faq-a" role="region" aria-hidden="true">
             <div class="faq-a-inner">
-              Yes—mobile-first and SEO-ready. Growth and Elite include advanced SEO setup to help you rank and convert.
+              Yes. Mobile-first and SEO-ready. Our Growth and Elite plans include advanced SEO setup to help you rank and convert.
             </div>
           </div>
         </article>
@@ -247,7 +247,7 @@
           </button>
           <div class="faq-a" role="region" aria-hidden="true">
             <div class="faq-a-inner">
-              All plans include ongoing support while you’re subscribed—unlimited updates, routine checks, and quick help for issues or content changes.
+              All plans include ongoing support while you're subscribed. Unlimited updates, routine checks, and quick help for issues or content changes.
             </div>
           </div>
         </article>
@@ -273,7 +273,7 @@
           </button>
           <div class="faq-a" role="region" aria-hidden="true">
             <div class="faq-a-inner">
-              Yes—SSL (HTTPS) and best practices are standard. We’ll guide hosting and hardening so you’re safe by default.
+              Yes. SSL (HTTPS) and best practices are standard. We'll guide hosting and hardening so you're safe by default.
             </div>
           </div>
         </article>
@@ -286,7 +286,7 @@
           </button>
           <div class="faq-a" role="region" aria-hidden="true">
             <div class="faq-a-inner">
-              On Growth and Elite, we assist with the domain. Growth includes up to $50 toward domain/hosting; Elite covers it all. We’ll help you choose and set it up.
+              On our Growth and Elite plans, we assist with the domain. Growth includes up to $50 toward domain/hosting; Elite covers it all. We'll help you choose and set it up.
             </div>
           </div>
         </article>
@@ -299,7 +299,7 @@
           </button>
           <div class="faq-a" role="region" aria-hidden="true">
             <div class="faq-a-inner">
-              No surprise fees. If you want extras (e.g., premium booking tools, specialty plugins), we’ll outline any costs before you approve.
+              No surprise fees. If you want extras (e.g., premium booking tools, specialty plugins), we'll outline any costs before you approve.
             </div>
           </div>
         </article>
