--- a/plan-success.html
+++ b/plan-success.html
@@ -217,7 +217,7 @@
         <p class="muted">Our team is friendly, fast, and human.</p>
         <div class="cta">
           <a class="btn-ghost" href="https://webeaze.tawk.help" target="_blank" rel="noopener">Visit the Help Center</a>
-          <a class="btn-ghost" href="contact-us.html">Contact Support</a>
+          <a class="btn-ghost" href="website-request.html">Contact Support</a>
         </div>
       </section>
     </div>
