--- a/portal.html
+++ b/portal.html
@@ -150,7 +150,7 @@
     <div class="orb"></div><div class="orb orb2"></div>
     <div class="container-narrow">
       <h1>Client Portal</h1>
-      <p class="lead">Track your progress, request changes, and get support — all in one place.</p>
+      <p class="lead">Request changes, view site resources, and get support. All in one place.</p>
       <div id="hoursChip" class="chip" aria-live="polite"><i class="far fa-clock"></i>&nbsp;<span id="hoursText">Checking availability…</span></div>
     </div>
   </header>
@@ -203,8 +203,8 @@
         <!-- Left: requests + tabs -->
         <section class="card-glass tile">
           <h3><i class="fas fa-tools"></i> Website Requests</h3>
-          <p class="muted">You’ll get an email confirmation when we receive your request, and again when it’s completed.</p>
-          <a class="btn-accent mb-3" href="website-request.html">New Request</a>
+          <p class="muted">You'll get an email confirmation when we receive your request, and again when it's completed.</p>
+          <!-- <a class="btn-accent mb-3" href="website-request.html">New Request</a> -->
 
           <!-- Tabs -->
           <div class="tabs" role="tablist" aria-label="Portal sections">
@@ -224,7 +224,7 @@
             <p class="muted"><i>Updated: September 9, 2025</i></p>
             <ul class="pl-3">
               <li>New request ETA helper and simplified copy-paste templates.</li>
-              <li>Tracked tickets & site insights — in progress.</li>
+              <li>Zoom support is limited until December 15, 2025. Our new hours are 9:00am - 1:00pm ET Monday through Friday.</li>
             </ul>
           </div>
 
@@ -248,7 +248,7 @@
             </div>
 
             <div class="template">
-              <pre id="tpl2">Create a simple page called “Summer Camps 2025” with a hero, a schedule table I’ll provide, a short pricing blurb, and an FAQ accordion.</pre>
+              <pre id="tpl2">Create a simple page called “Summer Camps 2025” with a hero, a schedule table I'll provide, a short pricing blurb, and an FAQ accordion.</pre>
               <button class="btn btn-sm btn-outline-light copy-btn" data-target="tpl2">Copy</button>
             </div>
 
@@ -258,7 +258,7 @@
             </div>
 
             <div class="template">
-              <pre id="tpl4">Add a testimonials carousel with three quotes I’ll send you, each with a name, role, and small headshot.</pre>
+              <pre id="tpl4">Add a testimonials carousel with three quotes I'll send you, each with a name, role, and small headshot.</pre>
               <button class="btn btn-sm btn-outline-light copy-btn" data-target="tpl4">Copy</button>
             </div>
           </div>
@@ -267,7 +267,7 @@
         <!-- Right: announcements -->
         <aside class="card-glass tile">
           <h3><i class="far fa-bell"></i> Announcements</h3>
-          <div class="small muted">Business hours: Mon–Fri, 9:00am–5:00pm ET</div>
+          <div class="small muted">Working hours: Mon–Fri, 9:00am–5:00pm ET</div>
           <div class="chip mt-2" id="hoursSmall"><i class="far fa-clock"></i>&nbsp;<span id="hoursTextSmall">Checking…</span></div>
 
           <hr style="border-color:var(--border)">
