--- a/site-map.html
+++ b/site-map.html
@@ -93,7 +93,7 @@
     <div class="hero-inner container-narrow">
       <span class="eyebrow">Navigation</span>
       <h1>Site Map</h1>
-      <p class="lead">Everything on WebEaze—grouped by purpose for quick access. For crawlers, see <a href="/sitemap.xml"><strong>sitemap.xml</strong></a>.</p>
+      <p class="lead">Everything on WebEaze. Grouped by purpose for quick access. For crawlers, see <a href="/sitemap.xml"><strong>sitemap.xml</strong></a>.</p>
     </div>
   </header>
 
