--- a/success.html
+++ b/success.html
@@ -81,7 +81,7 @@
     /* CTA Buttons */
     .cta{display:flex;gap:12px;flex-wrap:wrap;justify-content:center;margin-top:14px}
     .btn-brand{background:var(--gold);color:#2a2140;border:none;border-radius:12px;padding:12px 16px;font-weight:700;text-decoration:none}
-    .btn-ghost{border:1px solid rgba(255,255,255,.3);border-radius:12px;padding:12px 16px;font-weight:600;text-decoration:none;color:#fff;background:transparent}
+    .btn-ghost{border:1px solid rgba(255,255,255,.3);border-radius:12px;padding:8px 16px;font-weight:600;text-decoration:none;color:#fff;background:transparent}
 
     /* FAQ */
     .faq dt{font-weight:600;margin:10px 0;cursor:pointer}
@@ -101,7 +101,7 @@
       <div class="checkmark" aria-hidden="true">
         <svg viewBox="0 0 52 52"><path d="M14 27l8 8 16-18"/></svg>
       </div>
-      <h1>You're booked—see you soon!</h1>
+      <h1>You're booked! We'll talk soon.</h1>
       <p class="lead">We’ve emailed your confirmation and calendar invite. Below are quick next steps and resources to make our time together super productive.</p>
       <span class="pill">Booked via Calendly</span>
     </div>
@@ -116,13 +116,13 @@
         <div class="card-lite">
           <h5><strong>1) Schedule time</strong></h5>
           <p class="mb-2">
-            Make sure to choose a time that works for you. Need to reschedule? Use the link in your confirmation email.
+            Ensure our meeting time is on your calendar. Need to reschedule? Use the link in your confirmation email.
           </p>
         
         </div>
         <div class="card-lite">
           <h5><strong>2) Gather assets</strong></h5>
-          <p class="mb-2">Logos, brand colors, examples you like—anything helps.</p>
+          <p class="mb-2">Logos, brand colors, examples you like. Anything helps.</p>
 
           <br>
           <a class="btn-ghost" href="mailto:support@webeaze.io">Email files to us</a>
@@ -131,7 +131,7 @@
         </div>
         <div class="card-lite">
           <h5><strong>3) Tech check</strong></h5>
-          <p class="mb-2">Join from a quiet place. Test your mic/camera if it’s a Zoom.</p>
+          <p class="mb-2">Try to join from a quiet place. Test your mic/camera if it's a Zoom.</p>
         
         </div>
       </div>
@@ -190,13 +190,13 @@
       <h2>Quick answers</h2>
       <dl class="faq">
         <dt>Will I get a calendar invite?</dt>
-        <dd>Yes—Calendly emails you a confirmation with a calendar invite and the reschedule/cancel link.</dd>
+        <dd>Yes. Calendly emails you a confirmation with a calendar invite and the reschedule/cancel link.</dd>
 
         <dt>Can I bring a teammate?</dt>
-        <dd>Absolutely. Forward them the invite so they have the join details.</dd>
+        <dd>Absolutely. You'll have the option to enter additional emails. Didn't see it? Forward them the invite so they have the join details.</dd>
 
-        <dt>What if I’m not sure which plan I need?</dt>
-        <dd>That’s what the call is for. We’ll recommend a plan after we understand your goals.</dd>
+        <dt>What if I'm not sure which plan I need?</dt>
+        <dd>That's what the call is for. We'll recommend a plan after we understand your goals.</dd>
       </dl>
     </div>
   </section>
@@ -205,7 +205,7 @@
   <section class="section-brown text-center">
     <div class="container-narrow">
       <h2 class="mb-2">Excited to meet you.</h2>
-      <p class="small">Until then, feel free to browse plans or send us any notes.</p>
+      <p class="small">Until then, feel free to browse plans or get in touch if you have any questions.</p>
       <div class="cta">
         <a class="btn-brand" href="pricing.html">Explore Plans</a>
         <a class="btn-ghost" href="mailto:support@webeaze.io">Email Us</a>
