Updates, new page

--- a/site-map.html
+++ b/site-map.html
@@ -109,6 +109,7 @@
             <li><a href="/pricing.html">Pricing</a></li>
             <li><a href="/samples.html">Samples</a></li>
             <li><a href="/maintenance.html">Unlimited Maintenance</a></li>
+            <li><a href="/referral.html">Referral Program</a></li>
             <li><a href="/consultation.html">Consultation</a></li>
           </ul>
         </div>
