--- a/referral.html
+++ b/referral.html
@@ -204,12 +204,12 @@
       <!-- Replace image paths with your real screenshots -->
       <figure class="shot reveal">
         <img src="images/service-based-business.png" alt="Service business homepage — clean hero, strong CTA">
-        <figcaption class="cap">Service business • Conversion-focused homepage</figcaption>
+        <figcaption class="cap">Conversion-focused homepage</figcaption>
       </figure>
 
       <figure class="shot reveal">
         <img src="images/ibis-prep-services.png" alt="Café menu page with seasonal promo banner">
-        <figcaption class="cap">Esteemed tutoring company • Custom services page</figcaption>
+        <figcaption class="cap">Custom services page</figcaption>
         </figcaption>
       </figure>
 
