--- a/index.html
+++ b/index.html
@@ -32,10 +32,27 @@
     .btn-brand:hover{background:var(--btn-hover); color:#fff; transform:translateY(-1px); box-shadow:0 14px 34px rgba(255,215,0,.35)}
     .btn-ghost{background:transparent; border:1.5px solid var(--border); color:#fff; border-radius:12px; padding:.9rem 1.25rem}
 
-    /* NAV */
-    .nav-wrap{position:sticky; top:0; z-index:999; backdrop-filter:saturate(120%) blur(8px); background:linear-gradient(180deg, rgba(0,0,0,.18), rgba(0,0,0,.05)); border-bottom:1px solid rgba(255,255,255,.15)}
-    .nav-link{opacity:.9}
-    .nav-link:hover{opacity:1}
+
+
+.nav-wrap .container,
+.nav-wrap .container-fluid,
+.nav-wrap .navbar,
+.nav-wrap .navbar > .container,
+.nav-wrap .navbar > .container-fluid {
+  background: transparent !important;
+  box-shadow: none !important;
+  border: 0 !important;
+}
+
+
+.nav-wrap .navbar::before,
+.nav-wrap .navbar::after,
+.nav-wrap .container::before,
+.nav-wrap .container::after {
+  content: none !important;
+}
+
+
 
     /* HERO */
     .hero{position:relative; overflow:hidden}
@@ -135,7 +152,7 @@ details.card-simple{
     /* Mobile hamburger */
 .hamburger{background:transparent;border:0;display:inline-flex;flex-direction:column;gap:4px;padding:6px}
 .hamburger span{display:block;width:22px;height:2px;background:#fff;border-radius:2px}
-#mobileNav{background:rgba(0,0,0,.45); border-top:1px solid rgba(255,255,255,.15)}
+#mobileNav{background:rgba(255, 255, 255, 0); border-top:1px solid rgba(255,255,255,.15)}
 #mobileNav .nav-link{opacity:.95}
 #mobileNav .nav-link:hover{opacity:1}
 
@@ -330,6 +347,72 @@ html { scroll-behavior: smooth; } /* native smooth scroll */
 
 
 
+.nav-wrap{
+  position:sticky; top:0; z-index:9999;
+
+  background:linear-gradient(180deg, rgba(10,6,22,.55), rgba(10,6,22,.28));
+  backdrop-filter:saturate(130%) blur(8px);
+  -webkit-backdrop-filter:saturate(130%) blur(8px);
+  border-bottom:1px solid rgba(255,255,255,.14);
+}
+
+
+.webeaze-nav{
+  background:transparent !important;
+  box-shadow:none !important;
+  padding:.6rem 0;
+  transition:padding .18s ease;
+}
+
+
+.scrolled .webeaze-nav{ padding:.45rem 0; }
+
+/* logo + brand word */
+.webeaze-nav .logo{height:40px; transition:height .18s ease}
+.scrolled .webeaze-nav .logo{height:34px}
+.brand-word{
+  letter-spacing:-.3px; font-weight:700;
+  background:linear-gradient(90deg, var(--gold), #fff);
+  -webkit-background-clip:text; -webkit-text-fill-color:transparent;
+}
+
+
+.webeaze-nav .nav-link{
+  color:#fff !important; opacity:.92; border-radius:10px;
+  padding:.45rem .7rem; transition:opacity .15s ease, background-color .15s ease;
+}
+.webeaze-nav .nav-link:hover{opacity:1; background:rgba(255,255,255,.08)}
+.webeaze-nav .nav-link.active{background:rgba(255,255,255,.12);}
+
+
+.btn-brand{
+  background:var(--gold); color:#3b2a7a; border:none;
+  border-radius:12px; padding:.6rem .9rem; box-shadow:0 8px 22px rgba(255,215,0,.22);
+}
+.btn-brand:hover{ background:#f2c600; color:#fff }
+
+
+
+.navbar-dark .navbar-toggler{ border-color:rgba(255,255,255,.35); }
+.navbar-dark .navbar-toggler-icon{
+  background-image:url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(255,255,255,.9)' stroke-width='2' stroke-linecap='round' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+
+.navbar.navbar-dark,
+.navbar {
+  background: transparent !important;
+  box-shadow: none !important;
+}
+
+
+.nav-wrap{
+  background: linear-gradient(180deg, rgba(10,6,22,.55), rgba(10,6,22,.28)) !important;
+  backdrop-filter: saturate(130%) blur(8px);
+  -webkit-backdrop-filter: saturate(130%) blur(8px);
+  border-bottom: 1px solid rgba(255,255,255,.14);
+}
+
 
 
   </style>
@@ -337,48 +420,39 @@ html { scroll-behavior: smooth; } /* native smooth scroll */
 <body>
 
   
-
 <!-- NAV -->
 <div class="nav-wrap">
-  <div class="container container-narrow py-2 d-flex align-items-center justify-content-between">
-    <a href="/" class="d-inline-flex align-items-center">
-      <img class="logo mr-2" src="images/webeaze-transparent copy.png" alt="WebEaze" />
-      <strong>WebEaze Web Design</strong>
-    </a>
+  <div class="container container-narrow">
+    <nav class="navbar navbar-expand-lg navbar-dark webeaze-nav" role="navigation" aria-label="Primary">
+      <a class="navbar-brand d-flex align-items-center" href="index.html">
+        <img class="logo" src="images/webeaze-transparent copy.png" alt="WebEaze" />
+        <strong class="ml-2 brand-word">WebEaze</strong>
+      </a>
 
-    <!-- Desktop links -->
-    <div class="d-none d-md-flex align-items-center">
-      <a class="nav-link mr-3" href="/maintenance.html">Unlimited Maintenance</a>
-      <a class="nav-link mr-3" href="/pricing.html">Services</a>
-      <a class="nav-link mr-3" href="#faq">FAQ</a>
-      <a class="nav-link mr-3" href="/contact-us.html">Contact Us</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobileNav"
+              aria-controls="mobileNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-      <a class="btn btn-sm btn-brand" href="/consultation.html">Get Started Today</a>
-    </div>
-
-    <!-- Mobile hamburger -->
-    <button class="hamburger d-md-none" type="button"
-            data-toggle="collapse" data-target="#mobileNav"
-            aria-controls="mobileNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span></span><span></span><span></span>
-    </button>
-  </div>
-
-  <!-- Mobile menu -->
-  <div id="mobileNav" class="collapse">
-    <div class="container container-narrow py-2 d-flex flex-column">
-      <a class="nav-link py-2" href="#benefits" data-toggle="collapse" data-target="#mobileNav">What We Do</a>
-      <a class="nav-link py-2" href="#plans" data-toggle="collapse" data-target="#mobileNav">Our Services</a>
-      <a class="nav-link py-2" href="#work" data-toggle="collapse" data-target="#mobileNav">About Us</a>
-      <a class="nav-link py-2" href="#faq" data-toggle="collapse" data-target="#mobileNav">FAQ</a>
-
- 
-
-      <a class="btn btn-brand my-2 align-self-start" href="#cta">Get Started Today</a>
-  
-    </div>
+      <div id="mobileNav" class="collapse navbar-collapse">
+        <ul class="navbar-nav ml-auto main-nav">
+          <li class="nav-item"><a class="nav-link" href="maintenance.html">Maintenance</a></li>
+          <li class="nav-item"><a class="nav-link" href="pricing.html">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="#faq">FAQ</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact</a></li>
+          <li class="nav-item ml-1">
+            <a class="btn btn-sm btn-brand" href="consultation.html">Get Started</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
   </div>
 </div>
+
+
+
+
+
 
 
   <!-- HERO -->
@@ -700,7 +774,7 @@ html { scroll-behavior: smooth; } /* native smooth scroll */
     var menu = document.getElementById('mobileNav');
     if (!menu) return;
 
-    // capture clicks on hash links inside the mobile menu
+
     menu.addEventListener('click', function (e) {
       var a = e.target.closest('a[href^="#"]');
       if (!a) return;
@@ -715,7 +789,7 @@ html { scroll-behavior: smooth; } /* native smooth scroll */
       // collapse the menu (Bootstrap 4)
       $(menu).collapse('hide');
 
-      // after collapse finishes, do a smooth scroll
+
       $(menu).one('hidden.bs.collapse', function () {
         // use scrollIntoView with smooth behavior
         target.scrollIntoView({ behavior: 'smooth', block: 'start' });
