--- a/referral.html
+++ b/referral.html
@@ -121,13 +121,19 @@
 
   <div id="mobileNav" class="collapse">
     <div class="container container-narrow py-2 d-flex flex-column">
-      <a class="nav-link py-2" href="#how" data-toggle="collapse" data-target="#mobileNav">How It Works</a>
-      <a class="nav-link py-2" href="#work" data-toggle="collapse" data-target="#mobileNav">Past Work</a>
-      <a class="nav-link py-2" href="#faq" data-toggle="collapse" data-target="#mobileNav">FAQ</a>
-      <a class="btn btn-brand my-2 align-self-start" href="https://406km9.share-na2.hsforms.com/2dzuAwKMYSnOES4ubap3SiQ" target="_blank" rel="noopener">Submit a Referral</a>
-    </div>
+        <!-- NO data-toggle/data-target on these links -->
+        <a class="nav-link py-2" href="#how">How It Works</a>
+        <a class="nav-link py-2" href="#work">Past Work</a>
+        <a class="nav-link py-2" href="#faq">FAQ</a>
+        <a class="btn btn-brand my-2 align-self-start"
+           href="https://406km9.share-na2.hsforms.com/2dzuAwKMYSnOES4ubap3SiQ"
+           target="_blank" rel="noopener">Submit a Referral</a>
+      </div>
   </div>
 </div>
+
+
+
 
 <!-- HERO -->
 <header class="hero py-5 py-md-6">
