--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ details.card-simple{
     /* Mobile hamburger */
 .hamburger{background:transparent;border:0;display:inline-flex;flex-direction:column;gap:4px;padding:6px}
 .hamburger span{display:block;width:22px;height:2px;background:#fff;border-radius:2px}
-#mobileNav{background:rgba(255, 255, 255, 0); border-top:1px solid rgba(255,255,255,.15)}
+#mobileNav{background:rgba(255, 255, 255, 0);}
 #mobileNav .nav-link{opacity:.95}
 #mobileNav .nav-link:hover{opacity:1}
 
