--- a/pricing.html
+++ b/pricing.html
@@ -319,14 +319,14 @@
         <summary>Performance & SEO</summary>
         <div class="grid">
           <div><strong>Mobile optimization</strong></div>
-          <div><span class="dot">Included</span></div>
-          <div><span class="dot">Included</span></div>
-          <div><span class="dot">Included</span></div>
+          <div><span class="dot"></span>Included</div>
+          <div><span class="dot"></span>Included</div>
+          <div><span class="dot"></span>Included</div>
 
           <div><strong>SEO tools</strong></div>
-          <div><span class="dot">Basic</span></div>
-          <div><span class="dot">Advanced</span></div>
-          <div><span class="dot">Advanced + Reporting</span></div>
+          <div><span class="dot"></span>Basic</div>
+          <div><span class="dot"></span>Advanced</div>
+          <div><span class="dot"></span>Advanced + Reporting</div>
         </div>
       </details>
 
