--- a/pricing.html
+++ b/pricing.html
@@ -18,7 +18,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="shortcut icon" href="images/favicon.png" type="image/png">
+  <link rel="shortcut icon" href="images/webeaze-transparent copy.png" type="image/png">
 
   <!-- GA -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JQM6ZR4JCB"></script>
