--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
   <meta name="twitter:description" content="Elegant sites. Real support. No hourly rates." />
   <meta name="twitter:image" content="https://webeaze.io/images/default-monochrome.png" />
 
-  <link rel="shortcut icon" href="https://webeaze.io/images/favicon.png" type="image/png" />
+  <link rel="shortcut icon" href="images/webeaze-transparent copy.png" type="image/png" />
 
   <!-- Fonts & CSS -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
