--- a/accessibility.html
+++ b/accessibility.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Accessibility Statement | WebEaze</title>
   <meta name="description" content="WebEaze is committed to building accessible, inclusive websites. Read our standards, testing, known issues, and how to get help." />
-  <link rel="shortcut icon" href="images/favicon.png" type="image/png" />
+  <link rel="shortcut icon" href="images/webeaze-transparent copy.png" type="image/png" />
 
   <!-- Fonts & CSS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
