--- a/consultation.html
+++ b/consultation.html
@@ -22,7 +22,7 @@
   <meta name="twitter:description" content="No tech stress. Just progress. Book a consult." />
   <meta name="twitter:image" content="https://webeaze.io/images/default-monochrome.png" />
 
-  <link rel="shortcut icon" href="/images/favicon.png" type="image/png" />
+  <link rel="shortcut icon" href="images/webeaze-transparent copy.png" type="image/png" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" />
 
