--- a/referral.html
+++ b/referral.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
-  <link rel="shortcut icon" href="images/favicon.png" type="image/png"/>
+  <link rel="shortcut icon" href="images/webeaze-transparent copy.png" type="image/png"/>
 
   <style>
     :root{
