--- a/terms.html
+++ b/terms.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Terms of Service & Privacy Policy | WebEaze</title>
   <meta name="description" content="Read WebEaze's Terms of Service and Privacy Policy. Clear language, predictable subscriptions, and strong respect for your data." />
-  <link rel="shortcut icon" href="images/favicon.png" type="image/png" />
+  <link rel="shortcut icon" href="images/webeaze-transparent copy.png" type="image/png" />
 
   <!-- Fonts & CSS -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
