--- a/portal.html
+++ b/portal.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"/>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet"/>
-  <link rel="shortcut icon" href="images/favicon.png" type="image/png"/>
+  <link rel="shortcut icon" href="images/webeaze-transparent copy.png" type="image/png"/>
 
   <!-- OG/Twitter -->
   <meta property="og:title" content="WebEaze Client Portal"/>
