--- a/site-map.html
+++ b/site-map.html
@@ -15,7 +15,7 @@
   <meta property="og:url" content="https://www.webeaze.io/site-map.html" />
   <meta property="og:image" content="https://webeaze.io/images/default-monochrome.png" />
 
-  <link rel="shortcut icon" href="https://webeaze.io/images/favicon.png" type="image/png" />
+  <link rel="shortcut icon" href="images/webeaze-transparent copy.png" type="image/png" />
 
   <!-- Fonts & CSS -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
