--- a/success.html
+++ b/success.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>You're Booked! | WebEaze</title>
   <meta name="description" content="Thanks for booking with WebEaze. Here are your next steps, prep tips, and helpful links before we meet." />
-  <link rel="shortcut icon" href="images/favicon.png" type="image/png" />
+  <link rel="shortcut icon" href="images/webeaze-transparent copy.png" type="image/png" />
 
   <!-- Fonts & CSS -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet" />
