--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@ html { scroll-behavior: smooth; } /* native smooth scroll */
         <ul class="navbar-nav ml-auto main-nav">
           <li class="nav-item"><a class="nav-link" href="maintenance.html">Maintenance</a></li>
           <li class="nav-item"><a class="nav-link" href="pricing.html">Services</a></li>
-          <li class="nav-item"><a class="nav-link" href="#faq">FAQ</a></li>
+          <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
           <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact</a></li>
           <li class="nav-item ml-1">
             <a class="btn btn-sm btn-brand" href="consultation.html">Get Started</a>
